Consolidate, for the greater good