@@ -1,14 +1,12 @@
 package com.studiomediatech.example.varnished.api;
 
-import com.studiomediatech.example.varnished.api.v1.ApiV1RestController;
-
 import org.springframework.hateoas.Link;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -24,15 +22,22 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 @RestController
 public class ApiRestController {
 
-    public static final Function<String, Link> API_LINK = rel ->
+    public static final Function<String, Link> API = rel ->
             linkTo(methodOn(ApiRestController.class).api()).withRel(rel);
+
+    public static final Function<String, Link> API_V1 = rel ->
+            linkTo(methodOn(ApiRestController.class).v1()).withRel(rel);
 
     @GetMapping("/api")
     public Map<String, Object> api() {
 
-        Link l1 = ApiRestController.API_LINK.apply("self");
-        Link l2 = ApiV1RestController.API_V1_LINK.apply("v1");
+        return Collections.singletonMap("links", List.of(API.apply("self"), API_V1.apply("v1")));
+    }
 
-        return Collections.singletonMap("links", Arrays.asList(l1, l2));
+
+    @GetMapping("/api/v1")
+    public Map<String, Object> v1() {
+
+        return Collections.singletonMap("links", List.of(API.apply("parent"), API_V1.apply("self")));
     }
 }
